--- a/Feistel_envsettings.html
+++ b/Feistel_envsettings.html
@@ -70,7 +70,7 @@
 <tr>
 <td>-ifn</td>
 <td>&nbsp;</td>
-<td>Feistel.prj</td>
+<td>DES_Decoder.prj</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -82,7 +82,7 @@
 <tr>
 <td>-ofn</td>
 <td>&nbsp;</td>
-<td>Feistel</td>
+<td>DES_Decoder</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@
 <tr>
 <td>-top</td>
 <td>&nbsp;</td>
-<td>Feistel</td>
+<td>DES_Decoder</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
