--- a/Feistel_summary.html
+++ b/Feistel_summary.html
@@ -94,9 +94,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Filip/Documents/workspace/ISE Projects/DES\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>czw. 23. sie 01:14:17 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Filip/Documents/workspace/ISE Projects/DES\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>pt. 24. sie 00:11:04 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 08/23/2018 - 01:33:31</center>
+<br><center><b>Date Generated:</b> 08/24/2018 - 00:11:57</center>
 </BODY></HTML>
