--- a/DES_Decoder_summary.html
+++ b/DES_Decoder_summary.html
@@ -75,10 +75,10 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Filicz/Documents/workspace/ISE Projects/DES\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>wt. 6. lis 15:57:22 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Filicz/Documents/workspace/ISE Projects/DES\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>wt. 6. lis 15:57:28 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Filicz/Documents/workspace/ISE Projects/DES\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>sob. 17. lis 15:39:32 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Filicz/Documents/workspace/ISE Projects/DES\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>sob. 17. lis 15:39:36 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/06/2018 - 23:09:11</center>
+<br><center><b>Date Generated:</b> 11/17/2018 - 15:39:36</center>
 </BODY></HTML>
